// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render button properly 1`] = `
<button>
  Test
</button>
`;

exports[`Button should render button properly with foo 1`] = `
<button>
  Lorem
</button>
`;
